# learner-quest

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/text/: credits.txt
src/: Events.cpp  Events.h  Game.cpp  Game.h  Interface.cpp  Interface.h  Options.h  Scene.h  SceneManager.cpp  SceneManager.h  UI.cpp  UI.h  main.cpp
src/Scenes/: Credits.h  Main.h  MainMenu.h  Second.h  TestScene.h  Third.h
src/Scenes/Additive/: Settings.h
src/UI/: Element.h  Elements.h
src/UI/Elements/: Box.h  Image.h  InteractiveText.h  RepeatableImage.h  Text.h
src/UI/Forward/: Element.h
src/Utilities/: Logger.cpp  Logger.h
